// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code output renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"codeOutput\\">
    display(&#39;&#39;);
  </pre>
</Blueprint3.Card>"
`;

exports[`Empty output renders an empty card 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  &#39;&#39;
</Blueprint3.Card>"
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"errorOutput\\">
    Line &lt;unknown&gt;: Expected , got .
  </pre>
</Blueprint3.Card>"
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </pre>
  <br />
  <pre className=\\"errorOutput\\">
    Line &lt;unknown&gt;: Expected , got .
  </pre>
</Blueprint3.Card>"
`;

exports[`Repl renders correctly 1`] = `
"<div className=\\"Repl\\">
  <div className=\\"repl-output-parent\\">
    <Component output={{...}} />
    <Component output={{...}} />
    <Component output={{...}} />
    <Component output={{...}} />
    <HotKeys className=\\"repl-input-parent row pt-card pt-elevation-0\\" handlers={{...}}>
      <ReplInput handleBrowseHistoryDown={[Function: handleBrowseHistoryDown]} handleBrowseHistoryUp={[Function: handleBrowseHistoryUp]} handleReplValueChange={[Function: handleReplValueChange]} handleReplEval={[Function: handleReplEval]} handleReplOutputClear={[Function: handleReplOutputClear]} output={{...}} replValue=\\"\\" />
    </HotKeys>
  </div>
</div>"
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"resultOutput\\">
    42
  </pre>
</Blueprint3.Card>"
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </pre>
  <pre className=\\"resultOutput\\">
    42
  </pre>
</Blueprint3.Card>"
`;

exports[`Running output renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <pre className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </pre>
</Blueprint3.Card>"
`;
